# ty-types

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-06-12-library-api-extraction.md  2026-06-12-stdlib-api-extraction.md
docs/superpowers/specs/: 2026-06-12-library-api-extraction-design.md
python/ty_types/: __main__.py
src/: collector.rs  library.rs  main.rs  project.rs  protocol.rs  registry.rs
tests/integration/: main.rs  protocol.rs
