[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ty-types"
version = "0.1.0"
description = "Expose ty's type inference as a CLI tool and JSON-RPC server."
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/knutwannheden/ty-types"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "ty_types"
python-source = "python"
strip = true
